--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,16 @@ h2 {
     text-align: center;
 }
 img {
-    font-family: Verdana;
-    font-size: 100px;
+    width: 800px;
+    height: auto;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 time {
-    text-align: center;
+    font-size: 20px;
 
 }
-img {
-    margin-left: 180px;
+p {
+    font-size: 20px;
+    text-align: center;
 }
